@@ -15,6 +15,7 @@ DIST grsecurity-sources-extras-4.9.59.tar.xz 2707208 SHA256 d762fe59ee49fd17d0df
 DIST grsecurity-sources-extras-4.9.64.tar.xz 2779744 SHA256 b10630c0dd3b9c89d44652260c9418f6d9188d2839103a6b883959c2936e491c SHA512 1dbfbca58c7b55dd5e6cb80d81d4444440fbfe54f5b4a3dbe000c5300c51618eacfd61394c030f29f3fc02d6ecf5af09b7bdfc0523f185dd3ab242c1f479b43b WHIRLPOOL a27fffcf78d64a4c5d08a107eaf0bd3330862df17038c870ad6b044fba1f288fc3a43b0c049e83376c9b483099d7303d0cd2ebddc5d515c640f5e5fffc82904c
 DIST grsecurity-sources-extras-4.9.65.tar.xz 2783720 SHA256 143441ab00ae67060294fc4463a7e0385a529740d41fabef686e030d171f3134 SHA512 b37526937ba13e8f68e01a580561c3d15ca717226b17f985478a1bbea90c5d0be614ecc0a0f8143732b83fb19315fdb9c11680d17c5888b8d550c73242cb8860 WHIRLPOOL 9fa2f3a1eab60964d894cbad25ddc0c50a65766c48641feeee31aedd382e33c65711b42805dc7b86af2e525b028345a8dd659edc8ef35912777802505087b802
 DIST grsecurity-sources-extras-4.9.67.tar.xz 2823248 SHA256 9625dfdfd3134b0024017c2febcecd0af50e4c8c507dc2e9cacaaf29cc53cb43 SHA512 cff73f6c6be07f1231719f827488ed86c2cc8ad032a9ee3fbc1846d49967a01a7119d3de81e4c86ae3a3baf67c4d027ca9b74f122348fa40ba2d4a227d06b6e8 WHIRLPOOL 333c58070c75f35d52e83dd9c293f17ab16c324b0ded5c4ae28258e0e4b90059bacb1756aa46c8be01586d9463ad3460555fb5eae61f5aa7535b0c7ee52db77d
+DIST grsecurity-sources-extras-4.9.68.tar.xz 2845624 SHA256 b92794fe0eed486cc52fd23a45107795be3375d47bba57dbba32b6a87adb71c7 SHA512 21b745a2ba5ba435197696b97128a0febba100022846db1412d3859a90f452f5c9251d8fc1f6674fdb9d28c28648e0b5d5a816bc37adaa61252b4ae23a0b5829 WHIRLPOOL 47ef9767b4c15c05c0bd40c67d235e3649ac27a69dbc7a977760dd188d8d92909fda9b225baa3a7a24e2999666e4474cfc4fd9c19d57f2ff2991503e3af28e0e
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -30,21 +31,22 @@ EBUILD grsecurity-sources-4.9.59.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.64.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.65.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.67.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 2896 SHA256 1659c4891cbde19fc47f8b744aa9fd7a2d1bdb8296446c82b031c952cc22017d SHA512 ae43e77c70c2db996aedee0652264c88da82c78c84497df294ce9f2fe775407a3da3fdd26598183218ce5fb63919152ce8f21258cff09721be4e68efc118b48a WHIRLPOOL b307c7a0550a421c3e3320591b84c838213abb51a7666a3e2086360fd2e8115ac77da3501ab561b72e94e74ed57966bc11aa2f0fb9ac225ce4995ff592148a5d
+EBUILD grsecurity-sources-4.9.68.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 3091 SHA256 bdba0ea14d4923243f6a27a16ca3f21977167ecfe80404695f4ac4b16f7770cf SHA512 d26d34ac34e6df382a730d9d0d8f30fd2d377b559e877d9fc751bfa711285b7abc2f01f33cbebb4f7c7ffd63ad11117eab91fabd8289750994dbbf7b0a6dbfa9 WHIRLPOOL 7cc95271ca8f211e153fcd48cb5a825e8868b639e5791878656499c545ecbcbc6443ec9c62c1e897d4755242aea2ed667aa4ea2fea6fba83c74928a528d93643
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlooOD8ACgkQunvTUHGU
-RZ/jrg//e8ZvgpldR8R+qEyOosExQdtW8AwGJYuKR5DIgVIX6/6RE+6REJcKZWYE
-ZSlAqyzEQEF4OtkPvShjfcxlFGRGNnWztuOfAUNnDBka0unMzWEa+YsHHllhb8cd
-WuYddcPgHr4EfqNbPsKO2sfQZ6HxmCY6MUJd04IRayPb4hv2WMp79fPBJaob9YCD
-bQTY72Rq3BHiEkl3NEQok7tovqBukCgSu0K+fYxqYGMFjnzgSbxtLCb7PiE/kMYN
-ur1Zz1fYc5rltMN7ohSgNlI4JeK78+tI59lV6rr/xFxFGYsx1kNrFokutxLE5vgW
-MniBvz5TpaaK+M86r/CHoc3vQkmug48gI32VsbuONHYR9p4GsAMduDK5l0zE9CWk
-sjzVmvvLJ/fgjxuu/Rr0NsVbkeEkr62yyL5/D5vA5iBa3u66tBT/4ULL56uxO0WY
-g/72jWQj3fa8f8BRWMTy776YqV9oI5vmMf/8KbtcCIoppXSJeipr3IHDQiOCPp9G
-1iO3mSzUJNR+oeddiLxR4Y9N4qH7h6Rql0OCY87fe/8EXBz4/ZsrSgBzveXrNCup
-+ndiGC93YknU4YqcIHVx2S868kgd/WQflm3z5xUV0QjNFt2IIUN2SE48wEdHUYQT
-hHYaMRg5FbiC31+Z9ZlGGUxUOqKGwzpNzwyMnW/zkBgLRQu9XVI=
-=421P
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlourv0ACgkQunvTUHGU
+RZ8wSBAAlJeoPew7N931DKgU9ZLbXV2kl56kBTUMl2U/1fJvEq/O6oDk5JJdSbUS
+/CC5kaOZzOABxAfEeklsa9+yHn99fACstnc9yleubPwu5yXziFWPeNzykJB6JVJX
+lFh+jrFWpYPzJ4YF8OJuYK8Ww8Rx2vkWUoBvHH6jwFRZCpquFxeziD3SBttdumjH
+ehL8XmxIXhNomQ8CKOYDd4LruLjaII2DY3JcsRBQld6O9txytjsqEZXwgAbwUlnx
+f5Jl5rBu+v3xojFt54WVbKG0Ti+Fo0vncbsvm7pBTjnccQAchEnE0CXl87xRu6CP
+ArChIPveBu2lVVr4ykRzAaR1OM9MfmN9pFJhDEW+bUiPiN8PDC8xuO3VMOm1DXLf
+AQNMfHXeKs2yrXwpR5b7OTcdK3woGYUOgn7cZ+jOyhaj7BW66fivs7oqhOQiEutc
+rKuUEwDs+l9809uuJPbPEvpEK8pbWIaOjFxhKcNy0ViO/9GuSqqBKTib/t6hJihO
+6duKut7AqThkipk/y+uMrWNkDHS2qB+9xOiSJz+EYRnRwkCpH+jE9oy6ukM6WMYt
+yhC+CQrvDJkGWkWdpCyG0NdsSBdgvHiP9tuXXmpgOtL7LlNRs0aWgz939sGrB9Ca
+IEOHAyDMvSMD+aSRLCLIAO4FgdmKeUCrreUvxnV4dofOX5tdee8=
+=uKXu
 -----END PGP SIGNATURE-----
